Fix orange circle not aligned correctly
Fix orange circle not aligned correctly

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -37,9 +37,9 @@ body {
 }
 
 .circle-76px {
-	width: 76px;
-	height: 76px;
-	right:-25px;
+	width: 70px;
+	height: 70px;
+	right:-35px;
 	top:-45px;
 }
 
